add fixes to files for task 9

--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -8,10 +8,10 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for state in cities|dictsort %}
-            <LI>{{state[0][0]}}: <B>{{state[0][1]}}</B>
+        {% for state in states|sort(attribute="name") %}
+            <LI>{{state.id}}: <B>{{state.name}}</B>
                 <UL>
-                {% for city in state[1]|sort(attribute="name") %}
+                {% for city in state.cities|sort(attribute="name") %}
                     <LI>{{city.id}}: <B>{{city.name}}</B></LI>
                 {% endfor %}
                 </UL>
